# paperdb

./: .gitignore  README.md  pyproject.toml
data/raw/: papers_100.jsonl  venues.json
data/synth/: test.jsonl  train.jsonl  utils.py
db/: async_completion.py  index.py  index_dense.py  index_relational.py  retrieve.py  retrieve_dense.py  retrieve_relational.py
db/retrieval/: dense.py
db/sql/: query.py
eval/: run_eval.sh  score.py
results/: oracle.jsonl  random.jsonl
results/content_as_query-claude_key_passages/: train.dense-all-units.metrics.json  train.relational-detailed-v2.metrics.json  train.relational-detailed-v2.results.jsonl  train.relational-minimal-v2.metrics.json  train.relational-minimal-v2.results.jsonl
results/content_as_query-claude_keywords/: train.dense-all-units.metrics.json  train.dense-para-abs.metrics.json  train.relational-detailed-v2.metrics.json  train.relational-detailed-v2.results.jsonl  train.relational-minimal-v2.metrics.json  train.relational-minimal-v2.results.jsonl
results/content_as_query-gpt_key_passages/: train.dense-all-units.metrics.json  train.dense-para-abs.metrics.json  train.relational-detailed-v2.metrics.json  train.relational-detailed-v2.results.jsonl  train.relational-minimal-v2.metrics.json  train.relational-minimal-v2.results.jsonl
scripts/: 1_analyze_missing_fields_of_papers.py  2_organize_paragraphs.py  3_combine_papers_and_paragraphs.py  4_generate_statistics.py  compute_score.sh  index_papers.sh  retrieve_papers_dense.bash  retrieve_papers_relational.bash
stats/: generate_plots.py  paper_statistics.md
(+100 files in other folders)
