[project]
name = "paperdb"
version = "0.1.0"
description = "A simple, lightweight project using LMs + SQL dbs for re-finding research papers"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["db", "eval"]
