[project]
name = "paperdb"
version = "0.1.0"
description = "A simple, lightweight project using LMs + SQL dbs for re-finding research papers"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.2.0",

    "transformers>=4.51.0",
    "torch==2.6.0",
    "faiss-cpu",
    "psycopg2",
    "openai",
    "nest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["db", "eval"]
